--- a/src/dotnet/APIView/APIViewWeb/wwwroot/css/site.css
+++ b/src/dotnet/APIView/APIViewWeb/wwwroot/css/site.css
@@ -315,6 +315,12 @@ code-inner {
     white-space: normal;
 }
 
+.line-comment-icon-cell {
+    user-select: none;
+    width: 1em;
+    white-space: normal;
+}
+
 .line-comment-button-cell::before {
     display: block;
     height: 0;
@@ -418,4 +424,16 @@ code-inner {
 
 .icon-package {
     background: url(/icons/package.png) center left no-repeat;
+}
+
+.icon-comments {
+    cursor: pointer;
+}
+
+.hidden {
+    visibility: hidden;
+}
+
+.inline {
+    display: inline;
 }
