Remove hide button; do everything client side

--- a/src/dotnet/APIView/APIViewWeb/wwwroot/css/site.css
+++ b/src/dotnet/APIView/APIViewWeb/wwwroot/css/site.css
@@ -422,6 +422,10 @@ code-inner {
 
 .icon-comments {
     cursor: pointer;
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    z-index: 1;
 }
 
 .inline {
