--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
@@ -16,7 +16,7 @@
 }
 <div class="row">
     <div class="col my-2">
-        <div class="dropdown d-inline-block">
+        <div class="dropdown float-left mr-2">
             <a class="btn btn-sm btn-outline-secondary dropdown-toggle" href="#" role="button" data-toggle="dropdown">
                 @Model.Revision.Name
             </a>
@@ -28,6 +28,28 @@
                 }
             </div>
         </div>
+
+        @if (Model.PreviousRevisions.Any())
+        {
+            <div class="btn-group float-left">
+                @if (Model.DiffRevisionId != null)
+                {
+                    <a class="btn btn-sm btn-outline-secondary active" asp-route-diffRevisionId="">Diff with @Model.DiffRevision?.Name</a>
+                }
+                else
+                {
+                    <a class="btn btn-sm btn-outline-secondary" asp-route-diffRevisionId="@Model.PreviousRevisions.Last().RevisionId">Diff</a>
+                }
+                <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+
+                <div class="dropdown-menu">
+                    @foreach (var revision in Model.PreviousRevisions)
+                    {
+                        <a class="dropdown-item" asp-route-diffRevisionId="@revision.RevisionId" active-if="@(Model.DiffRevisionId == revision.RevisionId)">@revision.Name</a>
+                    }
+                </div>
+            </div>
+        }
 
         <form asp-resource="@Model.Review" asp-requirement="@ReviewOwnerRequirement.Instance" class="form-inline float-right ml-2" method="post" asp-page-handler="ToggleClosed">
             <input type="submit" class="btn btn-sm btn-secondary" value="@(Model.Review.IsClosed ? "Reopen": "Close")" />
@@ -65,41 +87,7 @@
             <tbody>
                 @foreach (var line in Model.Lines)
                 {
-                <tr class="code-line" data-line-id="@line.ElementId">
-                    <td class="line-comment-button-cell">
-                        @if (line.ElementId != null)
-                        {
-                            <a class="line-comment-button">+</a>
-                        }
-                    </td>
-                    <td class="code"><span class="code-inner">@Html.Raw(line.DisplayString)</span></td>
-                </tr>
-                    @if (line.Diagnostics.Any())
-                    {
-                        <tr class="code-diagnostics" data-line-id="@line.ElementId">
-                            <td colspan="2">
-                                @foreach (var lineDiagnostic in line.Diagnostics)
-                                {
-                                <p>
-                                    @if (lineDiagnostic.Text.StartsWith("DO"))
-                                    {
-                                        @:✅ <b>DO</b> @lineDiagnostic.Text.Substring(2)
-                                    }
-                                    else
-                                    {
-                                        @lineDiagnostic.Text
-                                    }
-                                    <a href="@lineDiagnostic.HelpLinkUri">Details</a>
-                                </p>
-                                }
-                            </td>
-                        </tr>
-                    }
-
-                    @if (line.ElementId != null && Model.Comments.TryGetThreadForLine(line.ElementId, out var thread))
-                    {
-                        <partial name="_CommentThreadPartial" model="thread" />
-                    }
+                    <partial name="_CodeLine" model="@line" />
                 }
             </tbody>
 
@@ -125,7 +113,7 @@
             <div class="new-comment-content">
                 <textarea class="new-thread-comment-text form-control" name="commentText" rows="3"></textarea>
             </div>
-            <input type="hidden" class="js-comment-id" name="commentId"/>
+            <input type="hidden" class="js-comment-id" name="commentId" />
             <button data-post-update="comments" type="submit" name="submit" value="Submit" class="comment-submit-button btn btn-outline-dark">Save</button>
             <button type="button" name="cancel" value="Cancel" class="comment-cancel-button btn btn-outline-dark">Cancel</button>
         </form>
