--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
@@ -55,6 +55,26 @@
             <input type="submit" class="btn btn-sm btn-secondary" value="@(Model.Review.IsClosed ? "Reopen": "Close")" />
         </form>
 
+        <div class="float-right">
+            <form asp-resource="@Model.Review" class="form-inline float-left ml-2" method="post" asp-page-handler="ToggleSubscribed">
+                @if (Model.Review.GetUserEmail(User) != null)
+                {
+                    if (Model.Review.IsUserSubscribed(User))
+                    {
+                        <input type="submit" class="btn btn-sm btn-outline-secondary" value="Unsubscribe" />
+                    }
+                    else
+                    {
+                        <input type="submit" class="btn btn-sm btn-primary" value="Subscribe" />
+                    }
+                }
+                else
+                {
+                    <input type="submit" class="btn btn-sm btn-primary" title="Link a microsoft.com email to your Github account to subscribe" disabled value="Subscribe" />
+                }
+            </form>
+        </div>
+
         <div class="dropdown d-inline-block float-right">
             <a class="btn btn-sm btn-outline-secondary dropdown-toggle" href="#" role="button" data-toggle="dropdown">
                 💬 @Model.ActiveConversations / @Model.TotalActiveConversations
