Add/edit comment on Ctrl+Enter (#354)
* Add/edit comment on Ctrl+Enter

Fixes #352

* Simplify form submission

Also handles both keyCode 10 and 13, since some versions of Chrome on some platforms send the wrong keyCode: https://bugs.chromium.org/p/chromium/issues/detail?id=79407

* Resolve PR feedback

--- a/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
+++ b/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
@@ -1,4 +1,21 @@
-﻿a.navbar-brand
+﻿/* Mixins used below
+-------------------------------------------------- */
+@mixin placeholder {
+    ::-webkit-input-placeholder {
+        @content
+    }
+    :-moz-placeholder {
+        @content
+    }
+    ::-moz-placeholder {
+        @content
+    }
+    :-ms-input-placeholder {
+        @content
+    }
+}
+
+a.navbar-brand
 {
     white-space: normal;
     text-align: center;
@@ -173,6 +190,10 @@ form.comment {
 
 .commentable {
     cursor: pointer;
+}
+
+@include placeholder {
+    font-style: italic;
 }
 
 .code-window {
