Icon for method in navigation panel (#467)

--- a/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
+++ b/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
@@ -450,6 +450,10 @@ code-inner {
     background: url(/icons/package.png) center left no-repeat;
 }
 
+.icon-method {
+    background: url(/icons/method.png) center left no-repeat;
+}
+
 .icon-comments {
     cursor: pointer;
     position: absolute;
