--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
@@ -22,7 +22,7 @@
             </a>
 
             <div class="dropdown-menu">
-                @foreach (var revision in Model.Review.Revisions)
+                @foreach (var revision in Model.Review.Revisions.Reverse())
                 {
                     <a class="dropdown-item" asp-route-id="@Model.Review.ReviewId" asp-route-revisionId="@revision.RevisionId">@revision.Name</a>
                 }
@@ -43,7 +43,7 @@
                 <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
 
                 <div class="dropdown-menu">
-                    @foreach (var revision in Model.PreviousRevisions)
+                    @foreach (var revision in Model.PreviousRevisions.Reverse())
                     {
                         <a class="dropdown-item" asp-route-diffRevisionId="@revision.RevisionId" active-if="@(Model.DiffRevisionId == revision.RevisionId)">@revision.Name</a>
                     }
