--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Revisions.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Revisions.cshtml
@@ -43,7 +43,7 @@
 <div class="row">
     <div class="col">
         <ul class="list-group mt-2">
-            @foreach (var revision in Model.Review.Revisions)
+            @foreach (var revision in Model.Review.Revisions.Reverse())
             {
                 <li class="list-group-item">
                     @revision.Name 
