--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
@@ -40,6 +40,9 @@
                         <li class="nav-item">
                             <a class="nav-link" id="profile-tab" data-toggle="tab" href="#c-help">C</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#python-help">Python</a>
+                        </li>
                     </ul>
 
                     <!-- Tab panes -->
@@ -60,6 +63,21 @@
                                 </li>
                                 <li>
                                     Upload the resulting archive.
+                                </li>
+                            </ol>
+                        </div>
+                        <div class="tab-pane" id="python-help">
+                            <ol>
+                                <li>
+                                    Install apistubgen.
+                                    <code>pip install git+"https://github.com/Azure/azure-sdk-tools.git#subdirectory=packages/python-packages/api-stub-generator&egg=api-stub-generator"</code>
+                                </li>
+                                <li>
+                                    Run apistubgen command with source repo or whl package as parameter to generate a json file with tokens
+                                    <code>apistubgen --pkg-path [path to package root]</code>
+                                </li>
+                                <li>
+                                    Upload generated json file
                                 </li>
                             </ol>
                         </div>
